fixed background on mobile I hope

--- a/css/gta.css
+++ b/css/gta.css
@@ -22,7 +22,6 @@ a:hover {
 }
 
 html {
-  background-image: url("images/gta/bg-rotate/01.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
